// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with empty props 1`] = `
<ul
  className="mondayStyleList monday-style-list"
  data-testid="list"
  onKeyDown={[Function]}
  tabIndex={-1}
>
  Something
</ul>
`;

exports[`renders correctly without props 1`] = `
<ul
  className="mondayStyleList monday-style-list"
  data-testid="list"
  onKeyDown={[Function]}
  tabIndex={-1}
/>
`;
